* Release 2.3.2

Prohibit the default target from having an address mask. It's too confusing
otherwise!

Fix handling of TCP connections in mixed mode.

Improved some comments in the code.

* Release 2.3.1 (2002/03/15)

Changed any potentially unsafe sprintf/vsprintf instances to
snprintf/vsnprintf. There should never have been a remote exploit possible,
this just eliminates any theoretical local ones in case someone has a reason
to run this as root ... (Note that use of these functions may be an issue
on some platforms although they do appear in the UNIX98 spec and exist
on Windows).

Allowed CIDR address specifications for target (and server name in listenmode).

Added IP address checking with the "checkaddress" keyword.

Finally caved in and added "httpproxy" to allow connection via a web proxy
server using "CONNECT".

Added "transparent" keyword to attempt to act as a transparent proxy and
forward on the client IP address. It may work on Linux 2.0/2.2. But then
again, it might not ...

* Release 2.3.0 (2002/03/07)

New functionality (at last!).

Added "listenip" and -b option to set listening address.

Added "tcptimeout" and "idletimeout" to allow inactive TCP tunnels to be
closed.

Added "ipmode" and -U option to support mixed traffic mode for a single
client or server.

Makefile changes for Irix and HPUX from Kyle Dent. Others to use latest
version of mingw gcc and force use of "native" perl.

Note that Zebedee will now be linked with MSVCRT.DLL. That should only
be a problem on an old Win95 machine.

Japanese documentation NOT YET updated.

* Release 2.2.2 (2001/04/13)

Include missing Japanese documentation.

Handle files without a terminating newline.

On FreeBSD, only create a parent process if the program is going to detach.
This means there isn't an idle parent process if the program is not run in
detached mode.

Fix "PUT" handling in ftpgw.tcl.

Added RPM spec file to the distribution.
