@@ -3,3 +3,6 @@
 #
 
 privatekey "63b9bda576480a0e0b99ff2399045b02158deb91"
+
+message "WARNING: You are using the sample server private key. \
+DO NOT use this in a production environment."
