@@ -1,11 +1,21 @@
 * Release 2.3.2
 
+Added "readtimeout" to allow some defence against denial of service attacks.
+If set to non-zero then remote data reads must be completed within this number
+of seconds. This primarily affects the Zebedee protocol exchanges, idle
+connection timeouts are handled through "idletimeout".
+
 Prohibit the default target from having an address mask. It's too confusing
 otherwise!
 
 Fix handling of TCP connections in mixed mode.
 
 Improved some comments in the code.
+
+Fix short writes on OpenBSD (thanks to Jon Leonard for this).
+
+Revised the example config files to make them more secure by default and to
+use more modern constructs.
 
 * Release 2.3.1 (2002/03/15)
 
